--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-list-endpoints": "^6.0.0",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
